force-app/main/default/objects/SproutSocialApp__Setup_Data__c/fields/SproutSocialApp__Label__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>