force-app/main/default/objects/SproutSocialApp__Setup_Data__c/fields/SproutSocialApp__Retention_Type__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Retention_Type__c</fullName>
    <description>The types of logs being saved</description>
    <label>Retention Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>errorsOnly</fullName>
            </value>
            <value>
                <fullName>allActivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>