force-app/main/default/objects/SproutSocialApp__Setup_Data__c/fields/SproutSocialApp__Retention_Value__c.field-meta.xml
<CustomField>
    <fullName>SproutSocialApp__Retention_Value__c</fullName>
    <description>Max number of logs retained</description>
    <label>Retention Value</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>